HelloUltraviolet/Fixtures/RejectedSource/Statements/FrameTargetNotActive/Expected.uv
//! Expected diagnostic metadata for the FrameTargetNotActive rejected-source specimen.

expectedDiagnostic("", "rule.18.Frame-Target-NotActive-Err")
